--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@
   width: 100%;
   height: 100vh;
 }
+@font-face {
+  font-family: 'MiFuente';
+  src: url('./fonts/big_noodle_titling.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
