--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,14 @@
   font-weight: lighter;
   font-style: normal;
 }
+@keyframes heartbeat {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
